[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/dialog/dialog.gd" type="Script" id=1]
[ext_resource path="res://addons/fonts/medium.otf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.180392, 0.996078, 0.996078, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.180392, 0.996078, 0.996078, 0.666667 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0 )
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
margin_top = 133.0
margin_right = 1024.0
margin_bottom = 165.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "ЗАГЛУШКА ТЕКСТА"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/GridContainer"]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 994.0
margin_bottom = 268.0
custom_constants/separation = 30

[node name="ConfirmButton" type="Button" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer/HBoxContainer"]
margin_right = 467.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
text = "ПОДТВЕРЖДЕНИЕ"

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/GridContainer/MarginContainer/HBoxContainer"]
margin_left = 497.0
margin_right = 964.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
text = "ОТМЕНА"

[connection signal="pressed" from="PanelContainer/MarginContainer/GridContainer/MarginContainer/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/GridContainer/MarginContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
